# pomodoro

./: Cargo.toml  Makefile
src/: client.rs  common.rs  daemon.rs  main.rs
systemd/: pomodoro.service
