[package]
name = "pomodoro"
version = "0.1.0"
authors = ["Antoine Wendlinger <awendlinger@mytraffic.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
rodio = "0.13.0"
thiserror = "1.0.22"
